# gatherer

./: .gitmodules  CMakeLists.txt
src/client/: application.cpp  application.hpp  axesvisualizer.cpp  axesvisualizer.hpp  filtermanager.cpp  filtermanager.hpp  gathereddata.cpp  gathereddata.hpp  imagerenderer.cpp  imagerenderer.hpp  pathsrenderer.cpp  pathsrenderer.hpp  scenerenderer.cpp  scenerenderer.hpp  spherefilter.cpp  spherefilter.hpp  utils.cpp  utils.hpp  windowfilter.cpp  windowfilter.hpp
